# hexagonal_library

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
proto/: hexagonal.proto
src/: client.rs  directory.rs  main.rs  server.rs
