[package]
name = "hexagonal_library"
version = "0.1.0"
authors = ["Dermot Haughey <hderms@gmail.com>"]
edition = "2018"
description="Toy application to experiment with content-addressable file storage and gRPC streaming"

[[bin]]
name = "hexagonal-server"
path = "src/server.rs"

[[bin]]
name = "hexagonal-client"
path = "src/client.rs"


[dependencies]
# fast, non-cryptographic hashing
blake3="0.3.7"

# portable method of dealing with temporary files
tempfile="3.1.0"

# gRPC
tonic = "0.3"
prost = "0.6"

# async, gRPC dependency
tokio = { version = "0.2", features = ["macros"] }

futures-util = "0.3.8"

async-stream="0.3.0"

log = "0.4.11"
env_logger = "0.8.2"
[build-dependencies]
tonic-build = "0.3"